crates/sigil-compiler/tests/snapshots/snap_typecheck__enum_with_payload_variant.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 104,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::wrap",
                    export_name: "m__wrap",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [
                        TypedParam {
                            name: "x",
                            ty: I64,
                            taint: Public,
                            flow: false,
                            mutability: Default,
                        },
                    ],
                    captures: [],
                    ret: Named(
                        "Maybe",
                        [],
                    ),
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Return(
                                TypedReturnStmt {
                                    value: Some(
                                        TypedExpr {
                                            ty: Named(
                                                "Maybe",
                                                [],
                                            ),
                                            kind: EnumConstruct(
                                                TypedEnumConstructExpr {
                                                    enum_name: "Maybe",
                                                    variant_index: 1,
                                                    fields: [
                                                        TypedExpr {
                                                            ty: I64,
                                                            kind: Local(
                                                                "x",
                                                            ),
                                                            span: Span {
                                                                start: 99,
                                                                end: 100,
                                                                source: SourceId(
                                                                    4294967295,
                                                                ),
                                                            },
                                                            refinement: None,
                                                        },
                                                    ],
                                                },
                                            ),
                                            span: Span {
                                                start: 87,
                                                end: 101,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                            refinement: None,
                                        },
                                    ),
                                    span: Span {
                                        start: 80,
                                        end: 102,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 74,
                            end: 104,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 45,
                        end: 104,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {
        "Maybe": (
            [],
            [
                (
                    "None",
                    [],
                ),
                (
                    "Some",
                    [
                        I64,
                    ],
                ),
            ],
        ),
    },
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
