crates/sigil-compiler/tests/snapshots/snap_typecheck__fixed_array_construct_and_index.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 63,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::third",
                    export_name: "m__third",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [
                        TypedParam {
                            name: "a",
                            ty: Array {
                                elem: I64,
                                size: 5,
                            },
                            taint: Public,
                            flow: false,
                            mutability: Default,
                        },
                    ],
                    captures: [],
                    ret: I64,
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Return(
                                TypedReturnStmt {
                                    value: Some(
                                        TypedExpr {
                                            ty: I64,
                                            kind: Index(
                                                TypedIndexExpr {
                                                    array: TypedExpr {
                                                        ty: Array {
                                                            elem: I64,
                                                            size: 5,
                                                        },
                                                        kind: Local(
                                                            "a",
                                                        ),
                                                        span: Span {
                                                            start: 56,
                                                            end: 57,
                                                            source: SourceId(
                                                                4294967295,
                                                            ),
                                                        },
                                                        refinement: None,
                                                    },
                                                    index: TypedExpr {
                                                        ty: I64,
                                                        kind: Literal(
                                                            Int(
                                                                2,
                                                            ),
                                                        ),
                                                        span: Span {
                                                            start: 58,
                                                            end: 59,
                                                            source: SourceId(
                                                                4294967295,
                                                            ),
                                                        },
                                                        refinement: None,
                                                    },
                                                    elem_type: I64,
                                                    bounds_proven: true,
                                                },
                                            ),
                                            span: Span {
                                                start: 56,
                                                end: 60,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                            refinement: None,
                                        },
                                    ),
                                    span: Span {
                                        start: 49,
                                        end: 61,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 43,
                            end: 63,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 10,
                        end: 63,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {},
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
